--- a/bootstrap/roles/ocp4-install-acs/templates/subs.yml.j2
+++ b/bootstrap/roles/ocp4-install-acs/templates/subs.yml.j2
@@ -4,7 +4,7 @@ metadata:
   name: rhacs-operator
   namespace: openshift-operators
 spec:
-  channel: latest
+  channel: stable
   installPlanApproval: Automatic
   name: rhacs-operator
   source: redhat-operators
